# mintzy-sdk

./: .gitignore  Makefile  README.md  end_user_example.py  pyproject.toml  test_api_key.py  test_auth.py
.github/workflows/: publish.yml  test.yml
examples/: live_trading_test.py
src/mintzy/: __init__.py  client.py  exceptions.py
src/mintzy/models/: config.py  pnl.py  prediction.py  session.py  trade.py
src/mintzy/predictions/: client.py  constants.py
src/mintzy/trading/: admin.py  client.py  configurations.py  pnl.py  sessions.py
tests/: conftest.py  test_predictions.py  test_trading.py
