[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mintzy"
version = "0.1.0"
description = "Mintzy Python SDK"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pandas>=2.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "respx>=0.21.0",
    "ruff>=0.3.0",
    "mypy>=1.0.0",
    "build>=1.0.0"
]
